fixing gap between name letters and creating partial for landing content

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
 @import 'navbar';
 @import 'mobile';
-@import 'colors';
-@import 'utilities';
+@import 'landing-content';
 
 * {
     box-sizing: border-box;
@@ -23,172 +22,5 @@ body {
     overflow-y: scroll;
     scroll-behavior: smooth;
 }
-
-
-.container {
-    width: 90%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 743px;
-    overflow: hidden;
-    position: relative;
-
-    h1 {
-        color: rgba(0, 0, 0, 0.05);
-        font-size: 20rem;
-        text-align: center;
-        transform: scale(1, 3);
-        position: absolute;
-        bottom: 85px;
-    }
-
-    .rdc1 {
-        @extend %shape-cont;
-        top:0;
-        left:0;
-        animation: x 7s linear infinite alternate;
-
-        .red-circle1 {
-            @extend %shape;
-            animation: y 3s linear infinite alternate;
-            
-        }
-    }
-
-    .rdc2 {
-        @extend %shape-cont;
-        bottom:0;
-        right:0;
-        animation: x2 5s linear infinite alternate;
-
-        .red-circle2 {
-            @extend %shape;
-            animation: y2 2s linear infinite alternate;
-            
-        }
-    }
-
-    .rdc3 {
-        @extend %shape-cont;
-        top:0;
-        right:0;
-        animation: x3 7s linear infinite alternate;
-
-        .red-circle3 {
-            @extend %shape;
-            animation: y3 2s linear infinite alternate;
-        }
-    }
-
-    .rdc4 {
-        @extend %shape-cont;
-        top:0;
-        right:0;
-        animation: x3 4s linear infinite alternate;
-
-        .red-circle4 {
-            @extend %shape;
-            animation: y3 5s linear infinite alternate;
-        }
-    }
-
-    .content {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        z-index: 1;
-
-        h2 {
-            font-size: 3rem;
-            line-height: 2;
-        }
-
-        .letter {
-            font-size: 4.5rem;
-            color: $primary;
-            cursor: pointer;
-            transition: all 300ms ease;
-        }
-
-        .letter:hover {
-            text-shadow: 2px 2px black;
-            transform: translateY(-10px);
-        }
-
-        h3 {
-            font-size: 2rem;
-        }
-
-        .go-btn {
-            height: 50px;
-            width: 150px;
-            cursor: pointer;
-            font-family: 'Sora', sans-serif;
-            font-size: 1rem;
-            color: white;
-            margin-top: 30px;
-            border-radius: 15px;
-            border: none;
-            background-color: $primary;
-            transition: transform 300ms ease;
-        }
-
-        .go-btn:hover {
-            transform: scale(1.1);
-        }
-    }
-}
-
-@keyframes x {
-    100% {
-        transform: translateX( calc(1711px - #{$shape-size}) );
-    }
-}
-
-@keyframes y {
-    100% {
-        transform: translateY( calc(743px - #{$shape-size}) );
-    }
-}
-
-@keyframes x2 {
-    100% {
-        transform: translateX(-1411px);
-    }
-}
-
-@keyframes y2 {
-    100% {
-        transform: translateY(-440px);
-    }
-}
-
-@keyframes x3 {
-    100% {
-        transform: translateX(-1411px);
-    }
-}
-
-@keyframes y3 {
-    100% {
-        transform: translateY(440px);
-    }
-}
-
-@keyframes x4 {
-    100% {
-        transform: translateX(1411px);
-    }
-}
-
-@keyframes y4 {
-    100% {
-        transform: translateY(-440px);
-    }
-}
-
 
 
